Use Java 21 (#2397)
Also, use a metafacture-core build based on metafacture/metafacture-core#765 (which uses Java 21).